added swagger configuration
